Revert "sonar (#5617)"
This reverts commit cc590241af95de5b0ecd6e19db1bca0dfe90d0c3.